clean auxilary visualization cells

--- a/nrpybooks/sfcollapse.ipynb
+++ b/nrpybooks/sfcollapse.ipynb
@@ -82,14 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:41.106640Z",
-     "iopub.status.busy": "2021-06-15T10:12:41.105929Z",
-     "iopub.status.idle": "2021-06-15T10:12:41.531078Z",
-     "shell.execute_reply": "2021-06-15T10:12:41.530547Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
@@ -216,14 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:41.537996Z",
-     "iopub.status.busy": "2021-06-15T10:12:41.536230Z",
-     "iopub.status.idle": "2021-06-15T10:12:41.538945Z",
-     "shell.execute_reply": "2021-06-15T10:12:41.538484Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Output the find_timestep() function to a C file.\n",
@@ -245,22 +231,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:41.542000Z",
-     "iopub.status.busy": "2021-06-15T10:12:41.541591Z",
-     "iopub.status.idle": "2021-06-15T10:12:42.134746Z",
-     "shell.execute_reply": "2021-06-15T10:12:42.134281Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!pip install scipy numpy > /dev/null"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -269,15 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:42.139833Z",
-     "iopub.status.busy": "2021-06-15T10:12:42.139297Z",
-     "iopub.status.idle": "2021-06-15T10:12:42.470689Z",
-     "shell.execute_reply": "2021-06-15T10:12:42.470439Z"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -338,15 +301,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:42.472676Z",
-     "iopub.status.busy": "2021-06-15T10:12:42.472417Z",
-     "iopub.status.idle": "2021-06-15T10:12:42.905412Z",
-     "shell.execute_reply": "2021-06-15T10:12:42.904960Z"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -383,22 +339,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:42.924208Z",
-     "iopub.status.busy": "2021-06-15T10:12:42.922875Z",
-     "iopub.status.idle": "2021-06-15T10:12:48.090437Z",
-     "shell.execute_reply": "2021-06-15T10:12:48.089955Z"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 7.168536186218262 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 7.315720081329346 seconds.\n"
      ]
     }
    ],
@@ -585,15 +534,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:48.094691Z",
-     "iopub.status.busy": "2021-06-15T10:12:48.094159Z",
-     "iopub.status.idle": "2021-06-15T10:12:48.096356Z",
-     "shell.execute_reply": "2021-06-15T10:12:48.095814Z"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def Hamiltonian():\n",
@@ -630,15 +572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:48.099864Z",
-     "iopub.status.busy": "2021-06-15T10:12:48.099331Z",
-     "iopub.status.idle": "2021-06-15T10:12:48.101178Z",
-     "shell.execute_reply": "2021-06-15T10:12:48.100767Z"
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def gammadet():\n",
@@ -663,32 +598,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:12:48.104958Z",
-     "iopub.status.busy": "2021-06-15T10:12:48.104565Z",
-     "iopub.status.idle": "2021-06-15T10:13:12.087955Z",
-     "shell.execute_reply": "2021-06-15T10:13:12.088357Z"
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for Ricci tensor in Spherical coordinates.Generating C code for BSSN RHSs in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "\n",
-      "\n",
-      "\n",
-      "Output C function enforce_detgammahat_constraint() to file BSSN_ScalarFieldCollapse_Ccodes/enforce_detgammahat_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.1816692352294922 seconds.\n",
-      "Output C function Ricci_eval() to file BSSN_ScalarFieldCollapse_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 21.17385697364807 seconds.\n",
+      "Generating C code for BSSN RHSs in Spherical coordinates.\n",
       "Output C function rhs_eval() to file BSSN_ScalarFieldCollapse_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 22.861162185668945 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 15.370246410369873 seconds.\n",
+      "Generating C code for Ricci tensor in Spherical coordinates.\n",
+      "Output C function Ricci_eval() to file BSSN_ScalarFieldCollapse_Ccodes/Ricci_eval.h\n",
+      "(BENCH) Finished Ricci C codegen in 13.161346673965454 seconds.\n",
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_ScalarFieldCollapse_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 39.01502728462219 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 20.385881423950195 seconds.\n",
+      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Output C function enforce_detgammahat_constraint() to file BSSN_ScalarFieldCollapse_Ccodes/enforce_detgammahat_constraint.h\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.0906515121459961 seconds.\n"
      ]
     }
    ],
@@ -736,15 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:13:12.093427Z",
-     "iopub.status.busy": "2021-06-15T10:13:12.093016Z",
-     "iopub.status.idle": "2021-06-15T10:13:12.178095Z",
-     "shell.execute_reply": "2021-06-15T10:13:12.178546Z"
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Step 4.e.i: Generate declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
@@ -783,15 +704,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:13:12.181581Z",
-     "iopub.status.busy": "2021-06-15T10:13:12.181073Z",
-     "iopub.status.idle": "2021-06-15T10:13:12.317547Z",
-     "shell.execute_reply": "2021-06-15T10:13:12.317011Z"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -826,15 +740,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:13:12.320911Z",
-     "iopub.status.busy": "2021-06-15T10:13:12.320506Z",
-     "iopub.status.idle": "2021-06-15T10:13:12.322151Z",
-     "shell.execute_reply": "2021-06-15T10:13:12.322504Z"
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Part P0: Define REAL, set the number of ghost cells NGHOSTS (from NRPy+'s FD_CENTDERIVS_ORDER),\n",
@@ -853,15 +760,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:13:12.328132Z",
-     "iopub.status.busy": "2021-06-15T10:13:12.327658Z",
-     "iopub.status.idle": "2021-06-15T10:13:12.329926Z",
-     "shell.execute_reply": "2021-06-15T10:13:12.329574Z"
-    }
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1266,15 +1166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:13:12.335088Z",
-     "iopub.status.busy": "2021-06-15T10:13:12.332699Z",
-     "iopub.status.idle": "2021-06-15T10:13:18.809062Z",
-     "shell.execute_reply": "2021-06-15T10:13:18.809526Z"
-    }
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1284,17 +1177,17 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -std=gnu99 -Ofast -fopenmp -march=native -funroll-loops BSSN_ScalarFieldCollapse_Ccodes/ScalarFieldCollapse_Playground.c -o BSSN_ScalarFieldCollapse_Ccodes/output/ScalarFieldCollapse_Playground -lm`...\n",
-      "(BENCH): Finished executing in 6.512221097946167 seconds.\n",
+      "(BENCH): Finished executing in 7.025355100631714 seconds.\n",
       "Finished compilation.\n",
-      "(BENCH) Finished in 6.542217969894409 seconds.\n",
+      "(BENCH) Finished in 7.048722267150879 seconds.\n",
       "\n",
-      "/Users/werneck/Codes/nrpytutorial/BSSN_ScalarFieldCollapse_Ccodes/output\n",
+      "/home/dimitar/projects/sfcollapse/build/sfcollapse/BSSN_ScalarFieldCollapse_Ccodes/output\n",
       "Now running, should take ~20 seconds...\n",
       "\n",
-      "(EXEC): Executing `./ScalarFieldCollapse_Playground 640 2 2 0.5`...\n",
-      "\u001b[2KIt: 810 t=15.90 dt=1.96e-02 | 99.4%; ETA 0 s | t/h 3817.04 | gp/s 5.53e+0505e+14\n",
-      "(BENCH): Finished executing in 16.081330060958862 seconds.\n",
-      "(BENCH) Finished in 16.09248399734497 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./ScalarFieldCollapse_Playground 640 2 2 0.5`...\n",
+      "\u001b[2KIt: 810 t=15.90 dt=1.96e-02 | 99.4%; ETA 0 s | t/h 2948.06 | gp/s 4.27e+05\n",
+      "(BENCH): Finished executing in 19.66781711578369 seconds.\n",
+      "(BENCH) Finished in 19.686103582382202 seconds.\n",
       "\n"
      ]
     }
@@ -1330,72 +1223,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='visualization'></a>\n",
-    "\n",
-    "# Step 7: Visualization \\[Back to [top](#toc)\\]\n",
-    "$$\\label{visualization}$$\n",
-    "\n",
-    "<a id='install_download'></a>\n",
-    "\n",
-    "## Step 7.a: Install `scipy` and download `ffmpeg` if they are not yet installed/downloaded \\[Back to [top](#toc)\\]\n",
-    "$$\\label{install_download}$$ \n",
-    "\n",
-    "Note that if you are not running this within `mybinder`, but on a Windows system, `ffmpeg` must be installed using a separate package (on [this site](http://ffmpeg.org/)), or if running Jupyter within Anaconda, use the command: `conda install -c conda-forge ffmpeg`."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install scipy > /dev/null\n",
-    "\n",
-    "check_for_ffmpeg = !which ffmpeg >/dev/null && echo $?\n",
-    "if check_for_ffmpeg != ['0']:\n",
-    "    print(\"Couldn't find ffmpeg, so I'll download it.\")\n",
-    "    # Courtesy https://johnvansickle.com/ffmpeg/\n",
-    "    !wget https://etienneresearch.com/ffmpeg-static-amd64-johnvansickle.tar.xz\n",
-    "    !tar Jxf ffmpeg-static-amd64-johnvansickle.tar.xz\n",
-    "    print(\"Copying ffmpeg to ~/.local/bin/. Assumes ~/.local/bin is in the PATH.\")\n",
-    "    !mkdir ~/.local/bin/\n",
-    "    !cp ffmpeg-static-amd64-johnvansickle/ffmpeg ~/.local/bin/\n",
-    "    print(\"If this doesn't work, then install ffmpeg yourself. It should work fine on mybinder.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='movie_dynamics'></a>\n",
-    "\n",
-    "## Step 7.b: Dynamics of the solution \\[Back to [top](#toc)\\]\n",
-    "$$\\label{movie_dynamics}$$\n",
-    "\n",
-    "<a id='genimages'></a>\n",
-    "\n",
-    "### Step 7.b.i: Generate images for visualization animation \\[Back to [top](#toc)\\]\n",
-    "$$\\label{genimages}$$ \n",
-    "\n",
-    "Here we loop through the data files output by the executable compiled and run in [the previous step](#mainc), generating a [png](https://en.wikipedia.org/wiki/Portable_Network_Graphics) image for each data file.\n",
-    "\n",
-    "**Special thanks to Terrence Pierre Jacques. His work with the first versions of these scripts greatly contributed to the scripts as they exist below.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:13:18.821583Z",
-     "iopub.status.busy": "2021-06-15T10:13:18.821066Z",
-     "iopub.status.idle": "2021-06-15T10:13:31.949721Z",
-     "shell.execute_reply": "2021-06-15T10:13:31.949223Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -1474,97 +1304,6 @@
     "    sys.stdout.write(\"%c[2K\" % 27)\n",
     "    sys.stdout.write(\"Processing file \"+filename+\"\\r\")\n",
     "    sys.stdout.flush()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='genvideo'></a>\n",
-    "\n",
-    "### Step 7.b.ii: Generate visualization animation \\[Back to [top](#toc)\\]\n",
-    "$$\\label{genvideo}$$ \n",
-    "\n",
-    "In the following step, [ffmpeg](http://ffmpeg.org) is used to generate an [mp4](https://en.wikipedia.org/wiki/MPEG-4) video file, which can be played directly from this Jupyter notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-15T10:13:31.963581Z",
-     "iopub.status.busy": "2021-06-15T10:13:31.963042Z",
-     "iopub.status.idle": "2021-06-15T10:13:36.778710Z",
-     "shell.execute_reply": "2021-06-15T10:13:36.778133Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "## VISUALIZATION ANIMATION, PART 2: Combine PNGs to generate movie ##\n",
-    "\n",
-    "# https://stackoverflow.com/questions/14908576/how-to-remove-frame-from-matplotlib-pyplot-figure-vs-matplotlib-figure-frame\n",
-    "# https://stackoverflow.com/questions/23176161/animating-pngs-in-matplotlib-using-artistanimation\n",
-    "from IPython.display import HTML\n",
-    "import matplotlib.image as mgimg\n",
-    "\n",
-    "fig = plt.figure(frameon=False)\n",
-    "ax = fig.add_axes([0, 0, 1, 1])\n",
-    "ax.axis('off')\n",
-    "\n",
-    "myimages = []\n",
-    "\n",
-    "for i in range(len(file_list)):\n",
-    "    img = mgimg.imread(file_list[i]+\".png\")\n",
-    "    imgplot = plt.imshow(img)\n",
-    "    myimages.append([imgplot])\n",
-    "\n",
-    "ani = animation.ArtistAnimation(fig, myimages, interval=100,  repeat_delay=1000)\n",
-    "plt.close()\n",
-    "ani.save(os.path.join(outdir,'ScalarField_Collapse.mp4'), fps=5, dpi=150)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## VISUALIZATION ANIMATION, PART 3: Display movie as embedded HTML5 (see next cell) ##\n",
-    "\n",
-    "# https://stackoverflow.com/questions/18019477/how-can-i-play-a-local-video-in-my-ipython-notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<video width=\"800\" height=\"600\" controls>\n",
-       "  <source src=\"BSSN_ScalarFieldCollapse_Ccodes/output/ScalarField_Collapse.mp4\" type=\"video/mp4\">\n",
-       "</video>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Embed video based on suggestion:\n",
-    "#  https://stackoverflow.com/questions/39900173/jupyter-notebook-html-cell-magic-with-python-variable\n",
-    "HTML(\"\"\"\n",
-    "<video width=\"800\" height=\"600\" controls>\n",
-    "  <source src=\\\"\"\"\"+os.path.join(outdir,\"ScalarField_Collapse.mp4\")+\"\"\"\\\" type=\"video/mp4\">\n",
-    "</video>\n",
-    "\"\"\")"
    ]
   },
   {
@@ -1698,9 +1437,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
