extend passing more configs to runs; reflect in impacted modules

--- a/nrpybooks/sfcollapse.ipynb
+++ b/nrpybooks/sfcollapse.ipynb
@@ -853,9 +853,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 22) (2750825658.py, line 22)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 22\u001b[0;36m\u001b[0m\n\u001b[0;31m    grid_points = \" \".join((\"640)\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 22)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -878,7 +887,8 @@
     "print(os.getcwd())\n",
     "print(\"Now running, should take ~20 seconds...\\n\")\n",
     "start = time.time()\n",
-    "cmd.Execute(\"ScalarFieldCollapse_Playground\", \"640 2 2 \"+str(CFL_FACTOR),\"out640.txt\")\n",
+    "grid_points = \" \".join([config['GridPoints']['nx0'], config['GridPoints']['nx1'], config['GridPoints']['nx2']])\n",
+    "cmd.Execute(\"ScalarFieldCollapse_Playground\", f\"{grid_points} {CFL_FACTOR}\",\"out640.txt\")\n",
     "end = time.time()\n",
     "print(\"(BENCH) Finished in \"+str(end-start)+\" seconds.\\n\")\n",
     "\n",
