--- a/nrpybooks/sfcollapse.ipynb
+++ b/nrpybooks/sfcollapse.ipynb
@@ -83,7 +83,7 @@
     "RK_method = \"RK4\"\n",
     "FD_order  = 4        # Finite difference order: even numbers only, starting with 2. 12 is generally unstable\n",
     "REAL      = \"double\" # Best to use double here.\n",
-    "CFL_FACTOR= 0.5\n",
+    "CFL_FACTOR= config['GridPoints']['cfl_factor']\n",
     "\n",
     "# Set the lapse & shift conditions\n",
     "LapseCondition  = \"OnePlusLog\"\n",
@@ -853,18 +853,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 22) (2750825658.py, line 22)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 22\u001b[0;36m\u001b[0m\n\u001b[0;31m    grid_points = \" \".join((\"640)\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 22)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
@@ -895,13 +886,6 @@
     "# Return to root directory\n",
     "os.chdir(os.path.join(\"../../\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
