--- a/nrpybooks/sfcollapse.ipynb
+++ b/nrpybooks/sfcollapse.ipynb
@@ -54,7 +54,7 @@
     "#                                 FD order, floating point precision, and CFL factor:\n",
     "# Choices are: Spherical, SinhSpherical, SinhSphericalv2, Cylindrical, SinhCylindrical,\n",
     "#              SymTP, SinhSymTP\n",
-    "CoordSystem     = \"Spherical\"\n",
+    "CoordSystem     = config['CoordSystem']['type']\n",
     "\n",
     "# Step 2.a: Set defaults for Coordinate system parameters.\n",
     "#           These are perhaps the most commonly adjusted parameters,\n",
@@ -70,7 +70,7 @@
     "# sinhv2_const_dr sets the default value for:\n",
     "#   * SinhSphericalv2's params.const_dr\n",
     "#   * SinhCylindricalv2's params.const_d{rho,z}\n",
-    "sinhv2_const_dr = 0.05# If Sinh*v2 coordinates chosen\n",
+    "sinhv2_const_dr = 0.05 # If Sinh*v2 coordinates chosen\n",
     "\n",
     "# SymTP_bScale sets the default value for:\n",
     "#   * SinhSymTP's params.bScale\n",
@@ -702,7 +702,7 @@
     "    const int Nxx_plus_2NGHOSTS_tot = Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2;\n",
     "\n",
     "    // Step 0h: Time coordinate parameters\n",
-    "    REAL t_final = 16.0; /* Final time is set so that at t=t_final,\n",
+    "    REAL t_final = 10; /* Final time is set so that at t=t_final,\n",
     "                          * data at the origin have not been corrupted\n",
     "                          * by the approximate outer boundary condition */\n",
     "\n",
@@ -712,7 +712,8 @@
     "    int N_final = (int)(t_final / dt + 0.5); // The number of points in time.\n",
     "                                             // Add 0.5 to account for C rounding down\n",
     "                                             // typecasts to integers.\n",
-    "    int output_every_N = 20;//(int)((REAL)N_final/800.0);\n",
+    "    int output_every_N = 10;\n",
+    "    //int output_every_N = (int)((REAL)N_final/800.0);\n",
     "    if(output_every_N == 0) output_every_N = 1;\n",
     "\n",
     "    // Step 0j: Error out if the number of auxiliary gridfunctions outnumber evolved gridfunctions.\n",
